# RL_MIG_scheduler

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
GPU_MIG_scheduler/: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
GPU_MIG_scheduler/data/input_test/: kernels_rodinia.txt
GPU_MIG_scheduler/include/: FAR_scheduler.h  GPU_info.h  MIG_manager.h  RL_scheduler.h  logging.h  tasks.h  utils.h
GPU_MIG_scheduler/scripts/: prepare_test_data.sh
GPU_MIG_scheduler/src/: FAR_scheduler.cpp  GPU_info.cpp  MIG_manager.cpp  RL_scheduler.cpp  main.cpp  tasks.cpp  utils.cpp
GPU_MIG_scheduler/src/RL_scheduler/: env.py  inferences.py  requirements.txt  task_info.txt  utils.py
GPU_MIG_scheduler/src/RL_scheduler/tmp/: schedule.txt  task_info.txt
RL_agent_versions/: README.md
aux_scripts/: n_per_group_count.py  num_slice.py  plot_makespan_normalized.py
basic_agent/: callbacks.py  env.py  model.py  my_env.py  render.py  train.py  utils.py
basic_agent_box/: callbacks.py  env.py  model.py  train.py
basic_agent_box_baselines/: callbacks.py  env.py  evaluate.py  ratios_N15_M21.csv  ratios_N15_M35_good_scaling.csv  ratios_N15_M35_mix_scaling.csv  ratios_N7_M7_bad_scaling.csv  ratios_N7_M7_good_scaling.csv  train.py  utils.py
basic_agent_box_bs3_old/: callbacks.py  env.py  evaluate.py  render.py  task_times.py  train.py
basic_agent_box_bs3_part_reduced/: callbacks.py  env.py  evaluate.py  ratios_N15_M35.csv  ratios_N15_M35_bad_scaling.csv  ratios_N15_M35_good_scaling.csv  ratios_N15_M35_mix_scaling.csv  train.py  utils.py
(+112 files in other folders)
